# sat_project

./: .dockerignore  .gitignore  Dockerfile  README.md  Readme.md  config.py  main.py  pyproject.toml  requirements.txt
models/trained_models/model10_rfdetr_best/: log.txt  results.json
models/trained_models/rfdetr_best_run_20250727_123823/: log.txt  results.json
models/trained_models/runsxview_20250725_221920/: log.txt  results.json
models/trained_models/runsxview_20250725_224030/: log.txt  results.json
models/trained_models/runsxview_20250725_233859/: log.txt  results.json
notebook/: preprocessing.ipynb  training.ipynb
scripts/: inference.py  model_training.py
