[project]
name = "sat-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.0",
    "modal>=1.1.0",
    "model-compression-toolkit>=2.4.2",
    "opencv-python>=4.8.1.78",
    "pandas>=2.3.1",
    "pycocotools>=2.0.10",
    "rfdetr>=1.2.1",
    "sahi>=0.11.31",
    "supervision>=0.26.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
